Fixed double scrollbar

--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -4,7 +4,7 @@
 }
 
 div.container {
-	overflow-y: overlay; 
+	overflow-y: hidden; 
 }
 
 div.aside-main {
